force-app/main/default/objects/AH_Rally_Setup__c/AH_Rally_Setup__c.object-meta.xml
<CustomObject>
    <description>setup to configure Rally Support Manager</description>
    <label>Rally Setup</label>
    <nameField>
        <displayFormat>RS{0000}</displayFormat>
        <label>Rally Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rally Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>