force-app/main/default/objects/AH_Rally_Setup__c/fields/Allow_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Allow_Requirements__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, allows the creation of user stories in Rally, otherwise only defects can be created.</description>
    <inlineHelpText>If checked, allows the creation of user stories in Rally, otherwise only defects can be created.</inlineHelpText>
    <label>Allow Requirements</label>
    <type>Checkbox</type>
</CustomField>