force-app/main/default/objects/AH_Rally_Setup__c/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <description>This contains the API version number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>V2.0</inlineHelpText>
    <label>API Version</label>
    <length>6</length>
    <type>Text</type>
</CustomField>