force-app/main/default/objects/AH_Rally_Setup__c/fields/Exception_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Exception_Notification_Email__c</fullName>
    <description>This contains email address to which an email is sent when the scheduler fails.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>enter a email address which is used to notify when scheduler fails</inlineHelpText>
    <label>Exception Notification Email</label>
    <type>Email</type>
</CustomField>