force-app/main/default/objects/AH_Rally_Setup__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password associated with the Rally username.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>password associated with the Rally username.</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>