force-app/main/default/objects/AH_Rally_Setup__c/fields/Rally_Exception_Count__c.field-meta.xml
<CustomField>
    <fullName>Rally_Exception_Count__c</fullName>
    <label>Rally Exception Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>