force-app/main/default/objects/AH_Rally_Setup__c/fields/RallyURL__c.field-meta.xml
<CustomField>
    <fullName>RallyURL__c</fullName>
    <description>URL for the Rally subscription in which defects and requirements will be created.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URL for the Rally subscription in which defects and requirements will be created.</inlineHelpText>
    <label>RallyURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>