force-app/main/default/objects/AH_Rally_Setup__c/fields/Schedular_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Schedular_Last_Run__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>This contains the time of the scehedular last run</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedular Last Run</label>
    <type>DateTime</type>
</CustomField>