force-app/main/default/objects/AH_Rally_Setup__c/fields/Story_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Story_Field_Map__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Story Field Map</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>