force-app/main/default/objects/AH_Rally_Setup__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Rally username used to create Rally artifacts from Salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Rally username used to create Rally artifacts from Salesforce.</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>