force-app/main/default/objects/AH_Rally_Setup__c/fields/workspace__c.field-meta.xml
<CustomField>
    <fullName>workspace__c</fullName>
    <defaultValue>&quot;Workspace 1&quot;</defaultValue>
    <description>Rally workspace where defects and requirements will be created .</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Rally workspace where defects and requirements will be created .</inlineHelpText>
    <label>Workspace Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>